//
//  MiscCell.swift
//  Stepippo
//
//  Created by 村松龍之介 on 2019/04/07.
//  Copyright © 2019 Yasasii-kai. All rights reserved.
//

import UIKit

final class MiscCell: UITableViewCell {
    
    // MARK: - IBOutlet properties
    @IBOutlet weak var iconImage: UIImageView!
    @IBOutlet weak var titleLabel: UILabel!
    @IBOutlet weak var detailLabel: UILabel!
    
    // MARK: - Methods
}
